<resources>
    <string name="app_name">MD</string>


    <!-- Strings related to login -->
    <string name="prompt_email">邮件</string>
    <string name="prompt_phone">手机</string>

    <string name="prompt_password">密码</string>

    <string name="error_invalid_password">密码错误</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Import">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="build.gradleOfBuidjar">import com.android.build.gradle.AppPlugin
        import proguard.gradle.ProGuardTask

        apply plugin: 'com.android.application'

        android {
        compileSdkVersion 23
        buildToolsVersion "23.0.2"

        defaultConfig {
        applicationId "org.chaos.demo.jar"
        minSdkVersion 19
        targetSdkVersion 22
        versionCode 1
        versionName "1.0"
        }
        buildTypes {
        release {
        minifyEnabled true
        proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        }
        }

        dependencies {
        compile fileTree(dir: 'libs', include: ['*.jar'])
        }

        //dependsOn 可根据实际需要增加或更改
        task buildJar(dependsOn: ['compileReleaseJavaWithJavac'], type: Jar) {

        appendix = "demo"
        baseName = "androidJar"
        version = "1.0.0"
        classifier = "release"

        //后缀名
        extension = "jar"
        //最终的 Jar 包名，如果没设置，默认为 [baseName]-[appendix]-[version]-[classifier].[extension]
        archiveName = "AndroidJarDemo.jar"

        //需打包的资源所在的路径集
        def srcClassDir = [project.buildDir.absolutePath + "/intermediates/classes/release"];
        //初始化资源路径集
        from srcClassDir

        //去除路径集下部分的资源
        // exclude "org/chaos/demo/jar/MainActivity.class"
        // exclude "org/chaos/demo/jar/MainActivity\$*.class"
        // exclude "org/chaos/demo/jar/BuildConfig.class"
        // exclude "org/chaos/demo/jar/BuildConfig\$*.class"
        // exclude "**/R.class"
        // exclude "**/R\$*.class"

        //只导入资源路径集下的部分资源
        include "org/chaos/demo/jar/**/*.class"

        //注: exclude include 支持可变长参数
        }

        task proguardJar(dependsOn: ['buildJar','processReleaseResources'], type: ProGuardTask) {
        //Android 默认的 proguard 文件
        configuration android.getDefaultProguardFile('proguard-android.txt')
        //会根据该文件对 Jar 进行混淆，注意：需要在 manifest 注册的组件也要加入该文件中
        configuration 'proguard-rules.pro'

        String inJar = buildJar.archivePath.getAbsolutePath()
        //输入 jar
        injars inJar
        //输出 jar
        outjars inJar.substring(0, inJar.lastIndexOf('/')) + "/proguard-${buildJar.archiveName}"

        //设置不删除未引用的资源(类，方法等)
        dontshrink

        AppPlugin appPlugin = getPlugins().findPlugin(AppPlugin)
        if (appPlugin != null) {
        "List
        <String> runtimeJarList
        if (appPlugin.getMetaClass().getMetaMethod("getRuntimeJarList")) {
        runtimeJarList = appPlugin.getRuntimeJarList()
        } else if (android.getMetaClass().getMetaMethod("getBootClasspath")) {
        runtimeJarList = android.getBootClasspath()
        } else {
        runtimeJarList = appPlugin.getBootClasspath()
        }

        for (String runtimeJar : runtimeJarList) {
        //给 proguard 添加 runtime
        libraryjars(runtimeJar)
        }
        }
        }
    </string>

</resources>
