<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Import"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Import"/>
        <item
            android:id="@+id/gallery"

            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery"/>
        <item
            android:id="@+id/slideshow"

            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/slideshow"/>
        <item
            android:id="@+id/tools"

            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools"/>
    </group>

    <item android:title="@string/communicate"

        >
        <menu>
            <item
                android:id="@+id/share"

                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/send"

                android:icon="@drawable/ic_menu_send"
                android:title="@string/send"/>
        </menu>
    </item>

</menu>
